--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,79 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".main.FixedMain_Activity">
 
-    <TextView
-        android:id="@+id/firstName"
-        android:layout_width="327dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="@string/FirstName"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/lastName"
-        android:layout_width="328dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="12dp"
-        android:hint="@string/LastName"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/firstName" />
-
-    <TextView
-        android:id="@+id/phone"
-        android:layout_width="328dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="17dp"
-        android:hint="@string/Phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address" />
-
-    <TextView
-        android:id="@+id/age"
-        android:layout_width="328dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="16dp"
-        android:hint="@string/Age"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone" />
-
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="328dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="13dp"
-        android:hint="@string/address"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastName" />
-
     <Switch
         android:id="@+id/activeSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:hint="@string/activeUser"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.445"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/age" />
+        app:layout_constraintTop_toBottomOf="@+id/addyID" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewUsersInfo"
-        android:layout_width="410dp"
-        android:layout_height="476dp"
+        android:layout_width="409dp"
+        android:layout_height="362dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activeSwitch" />
+        app:layout_constraintTop_toBottomOf="@+id/activeSwitch"
+        app:layout_constraintVertical_bias="0.973" />
+
+    <EditText
+        android:id="@+id/fNameID"
+        android:layout_width="368dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/FirstName"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/LNameID"
+        android:layout_width="364dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="@string/LastName"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fNameID" />
+
+    <EditText
+        android:id="@+id/ageID"
+        android:layout_width="360dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="11dp"
+        android:ems="10"
+        android:hint="@string/Age"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LNameID" />
+
+    <EditText
+        android:id="@+id/addyID"
+        android:layout_width="355dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="@string/address"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ageID" />
 </androidx.constraintlayout.widget.ConstraintLayout>
