--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -10,9 +10,10 @@
         android:id="@+id/activeSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/activeUser"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.441"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addyID" />
 
@@ -28,9 +29,11 @@
 
     <EditText
         android:id="@+id/fNameID"
-        android:layout_width="368dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/FirstName"
         android:inputType="textPersonName"
@@ -40,9 +43,11 @@
 
     <EditText
         android:id="@+id/LNameID"
-        android:layout_width="364dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/LastName"
         android:inputType="textPersonName"
@@ -53,9 +58,11 @@
 
     <EditText
         android:id="@+id/ageID"
-        android:layout_width="360dp"
-        android:layout_height="54dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="11dp"
+        android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/Age"
         android:inputType="number"
@@ -65,9 +72,11 @@
 
     <EditText
         android:id="@+id/addyID"
-        android:layout_width="355dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/address"
         android:inputType="textPersonName"
