--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -97,7 +97,7 @@
         app:layout_constraintVertical_bias="0.409" />
 
     <Button
-        android:id="@+id/addUser"
+        android:id="@+id/addUserButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
