--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -17,16 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneId" />
 
-    <ListView
-        android:id="@+id/recyclerViewUsersInfo"
-        android:layout_width="371dp"
-        android:layout_height="304dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activeSwitch"
-        app:layout_constraintVertical_bias="0.973" />
-
     <EditText
         android:id="@+id/fNameID"
         android:layout_width="0dp"
@@ -122,4 +112,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addyID" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="386dp"
+        android:layout_height="284dp"
+        android:layout_marginTop="76dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activeSwitch" />
 </androidx.constraintlayout.widget.ConstraintLayout>
